# handoff

./: .gitee-pipeline.yml  .gitignore  AGENTS.md  CONTRIBUTING.md  PR_1_5_DESCRIPTION.md  PR_DESCRIPTION.md  README.md  RELEASE_NOTES.md  STYLE.md  app.py  build_zip.py  migrate_db.py  pr-1.3-description.md  pyproject.toml  pyrightconfig.json  release-2026-3-10-plan  release-2026-3-10-plan.md  release-plan-2026.3.11.md
.gitee/workflows/: ci.yml
.github/: CODEOWNERS  copilot-instructions.md  cursor-automation-pr-reviewer.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  feature.yml
.github/agents/: README.md  handoff-ci-triage.agent.md  handoff-feature-implementer.agent.md  handoff-pr-reviewer-detection.agent.md  handoff-release-build.agent.md
.github/scripts/: pr_reviewer_detect.py
.github/workflows/: ci.yml  copilot-setup-steps.yml  pr-reviewer-detection.yml  pr-triage.yml  release-cd.yml
docs/: analytics-ideas.md  dashboard-ideas.md  product-architecture-plan.md  release-2026.3.6-plan.md
pages/: 1_Todos.py  2_Projects.py  3_Calendar.py
plans/: cli-full-implementation.md  demo-mode-and-uat.md  modular-template-planning.md  project-structure-restructure.md  template-readiness-refactoring.md  ui-design-implementation-plan.md
plans/demo-mode-and-uat/: PR-01-agent.md  PR-02-agent.md  PR-03-agent.md  PR-04-agent.md  PR-05-agent.md  PR-06-agent.md  README.md
scripts/: __init__.py  build_exe.py  build_full.py  build_obfuscated_patch.py  build_patch.py  build_zip.py  bump_version.py  capture_screenshots.py  cli.py  dev_cli.py  file_complexity_analysis.py  seed_demo.py  sizecheck.py  subprocess_utils.py
src/handoff/: __init__.py  __main__.py  backup_schema.py  data.py  data_handoffs.py  data_projects.py  data_queries.py  dates.py  db.py  docs.py  handoff_lifecycle.py  instrumentation.py  logging.py  models.py  page_models.py  paths.py  rulebook.py  search_parse.py  ui.py  ui_components.py  ui_facade.py  update_ui.py  updater.py  version.py
src/handoff/bootstrap/: __init__.py  config.py  docs.py  logging.py  paths.py
src/handoff/core/: __init__.py  backup_schema.py  handoff_lifecycle.py  models.py  page_models.py
src/handoff/data/: __init__.py  activity.py  handoffs.py  io.py  projects.py  queries.py
src/handoff/interfaces/: __init__.py
src/handoff/interfaces/cli/: __init__.py
src/handoff/interfaces/streamlit/: __init__.py  autosave.py  runtime_config.py  ui.py  update_ui.py
src/handoff/interfaces/streamlit/pages/: __init__.py  about.py  dashboard.py  now.py  now_forms.py  now_helpers.py  projects.py  system_settings.py
src/handoff/migrations/: __init__.py  runner.py
src/handoff/migrations/scripts/: __init__.py  m001_todo_completed_at_is_archived.py  m002_project_is_archived.py  m003_legacy_status_labels.py  m004_activity_log.py  m005_todo_next_check.py  m006_todo_to_handoff.py
src/handoff/pages/: __init__.py  about.py  analytics.py  calendar.py  dashboard.py  docs.py  focus.py  now.py  projects.py  settings.py  system_settings.py  todos.py
src/handoff/services/: __init__.py  dashboard_service.py  handoff_service.py  project_service.py  settings_service.py  todo_service.py
src/todo_app/: app_ui.py  data.py  db.py  docs.py  logging.py  models.py  ui.py  ui_components.py  ui_facade.py  update_ui.py  updater.py  version.py
src/todo_app/pages/: __init__.py  analytics.py  calendar.py  docs.py  focus.py  projects.py  settings.py  todos.py
tests/: __init__.py  conftest.py  test_analytics.py  test_analytics_render.py  test_app.py  test_app_import_paths.py  test_app_integration.py  test_app_ui.py  test_application_runtime_health.py  test_autosave.py  test_backup_schema.py  test_bootstrap_config_isolation.py  test_bootstrap_independence.py  test_bootstrap_integration.py  test_build_artifacts.py  test_build_dry_run.py  test_calendar.py  test_capture_screenshots.py  test_cli.py  test_cli_interface.py  test_config.py  test_core_package.py  test_dashboard.py  test_dashboard_render.py  test_data.py  test_dates.py  test_db.py  test_docs.py  test_handoff_lifecycle.py  test_instrumentation.py  test_interfaces_shim.py  test_launchers.py  test_log_application_action.py  test_logging_module.py  test_main.py  test_migration_m006.py  test_models.py  test_module_size.py  test_page_models.py  test_pages_now.py  (+28 more)
