[project]
name = "todo-app"
version = "2026.2.15"
description = "Chaos-tinged to-do app for juggling multiple projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "sqlmodel>=0.0.22",
    "loguru>=0.7.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0.0", "typer>=0.12.3", "rich>=13.7.0", "pyarmor>=9.2.0"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "pyarmor>=9.2.0",
    "pyright>=1.1.408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/todo_app", "scripts"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
link-mode = "copy"

[project.scripts]
todo = "scripts.cli:main"
