[project]
name = "handoff"
version = "2026.3.6"
description = "Handoff — see who's on the hook across all your projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "sqlmodel>=0.0.22",
    "loguru>=0.7.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "pyarmor>=9.2.0",
    "pyright>=1.1.408",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "typer>=0.12.3",
    "rich>=13.7.0",
    "pyarmor>=9.2.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handoff", "scripts"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--quiet -x --ff --cov --no-cov-on-fail --cov-report=term:skip-covered"

[tool.coverage.run]
omit = ["*/tests/*"]


[tool.uv]
link-mode = "copy"

[project.scripts]
handoff = "scripts.cli:main"

[tool.pyright]
include = ["src", "scripts"]
exclude = [
    "src/handoff/data.py",
    "src/handoff/pages/analytics.py",
    "src/handoff/pages/calendar.py",
    "src/handoff/pages/todos.py",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
