[project]
name = "handoff"
version = "2026.3.13"
description = "Handoff — see who's on the hook across all your projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.56.0",
    "sqlmodel>=0.0.22",
    "loguru>=0.7.3",
    "platformdirs>=4.0.0",
    "typer>=0.24.1",
    "rich>=15.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=9.0.3",
    "pyarmor>=9.2.0",
    "pyright>=1.1.408",
    "pytest-cov>=7.0.0",
    "playwright>=1.58.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/handoff", "scripts"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF", "N"]
# N812: import alias (e.g. __version__ as APP_VERSION) is conventional
# RUF001: emoji in UI strings (e.g. ➕ Add handoff) is intentional
# RUF002: en dash in docstrings (e.g. Mon–Sun) is typographically fine
ignore = [
  "N812",
  "RUF001",
  "RUF002",
]


[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--quiet -x --ff --cov --no-cov-on-fail --cov-report=term:skip-covered"

[tool.coverage.run]
omit = ["*/tests/*", "scripts/*"]


[tool.uv]
link-mode = "copy"

[project.scripts]
handoff = "handoff.interfaces.cli:main"
handoff-dev = "scripts.dev_cli:main"

[tool.pyright]
include = ["src", "scripts"]
exclude = [
    "src/handoff/data/",
    "src/handoff/interfaces/streamlit/pages/dashboard.py",
    "src/handoff/services/dashboard_service.py",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingTypeStubs = "none"
